Fri Apr 26 19:53:31 2002  Brian Gough  <bjg@network-theory.co.uk>

	* Makefile.am (EXTRA_DIST): removed KNOWN-PROBLEMS

Sun Feb 10 21:28:29 2002  Brian Gough  <bjg@network-theory.co.uk>

	* BUGS: added a list of known but unfixed bugs.

2002-02-07  Mark Galassi  <rosalia@galassi.org>

	* THANKS: added Karsten Howes <karsten@videotron.ca>.

Wed Jan 16 16:55:25 2002  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in acconfig.h: check whether IEEE comparisons work for
 	Inf, NaN and define HAVE_IEEE_COMPARISONS

Tue Jan  8 21:38:23 2002  Brian Gough  <bjg@network-theory.co.uk>

	* config.h (GSL_RANGE_CHECK_OFF): turn off range checking when
 	building the library, still on by default when compiling user
 	applications

Mon Nov 19 21:40:30 2001  Brian Gough  <bjg@network-theory.co.uk>

	* standardised all files to #include <gsl/...> for exported header
 	files rather than having some as #include "...", to simplify build
 	procedure

Fri Oct 19 15:19:45 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl-histogram.c (main): use gsl_histogram_alloc instead of
 	calloc

Wed Oct  3 11:06:51 2001  Brian Gough  <bjg@network-theory.co.uk>

	* removed auto-expanding RCS tokens from comments as they
 	interfere with making patches

	* configure.in: check for isinf(), finite(), isnan() as
 	macros. Also check for isfinite() as an alternative to finite().

Sat Sep 29 18:04:35 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl.m4: cleaned up arguments to GSL_CONFIG

Wed Sep 19 17:41:13 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl-histogram.c (main): turn off the display of mean and
 	standard deviation it is too confusing because it is not the mean
 	of the data itself.

Tue Sep 18 20:08:39 2001  Brian Gough  <bjg@network-theory.co.uk>

	* test_gsl_histogram.sh: modified the expected test output to
 	account for the mean,sigma lines now produced
 
Wed Sep 12 13:39:55 2001  Brian Gough  <bjg@network-theory.co.uk>
